--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -6,14 +6,20 @@
   color: #6d708d;
 }
 
+html {
+  background: #f6f6fe;
+}
+
 body {
   margin: 0;
   height: 100%;
   width: 100%;
   font-weight: 700;
   font-size: 15px;
-  background: url("../../images/bg-top.svg") no-repeat, #f6f6fe;
-  background-position: 50vw -30px;
+  background-image: url("../../images/bg-top.svg");
+  background-repeat: no-repeat;
+  background-position-y: -30px;
+  background-position-x: calc(100vw - 200px);
 }
 
 h2 {
@@ -42,6 +48,10 @@ header {
   padding: 40px 0 90px 0;
 }
 
+main {
+  max-width: 1050px;
+}
+
 .card {
   background: white;
   margin: 24px;
@@ -49,6 +59,7 @@ header {
   border-radius: 10px;
   box-shadow: 0px 10px 25px rgba(109, 112, 141, 0.1);
   padding: 20px 30px 30px 30px;
+  max-width: 500px;
 }
 
 .price p {
@@ -97,6 +108,52 @@ header {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+/* * MEDIA QUERIES
+ * */
+@media screen and (min-width: 548px) {
+  .card {
+    margin: 0 auto;
+    margin-top: 24px;
+  }
+}
+@media screen and (min-width: 800px) {
+  main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  .card {
+    margin: 0;
+    width: 100%;
+  }
+
+  .card:first-of-type {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .card:last-of-type {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .card.highlight {
+    padding-top: 50px;
+    padding-bottom: 60px;
+  }
+
+  .price p {
+    font-size: 3em;
+  }
+}
+@media screen and (min-width: 1050px) {
+  .price p {
+    font-size: 4.7em;
+  }
+}
 .monthly {
   display: none !important;
 }
