--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -108,6 +108,30 @@ main {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+#toggle .switch {
+  height: 30px;
+  width: 60px;
+  border-radius: 100px;
+  background: linear-gradient(to right, #a3a8f0, #696fdd);
+  display: inline-block;
+  position: relative;
+}
+
+#toggle .switch::after {
+  position: absolute;
+  content: "";
+  background: white;
+  height: 22px;
+  width: 22px;
+  top: 4px;
+  left: 4px;
+  border-radius: 100px;
+}
+
+.moveit::after {
+  left: 34px !important;
+}
+
 /* * MEDIA QUERIES
  * */
 @media screen and (min-width: 548px) {
@@ -154,7 +178,7 @@ main {
     font-size: 4.7em;
   }
 }
-.monthly {
+.hide {
   display: none !important;
 }
 
