--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -22,6 +22,10 @@ body {
   background-position-x: calc(100vw - 200px);
 }
 
+h1 {
+  margin-bottom: 10px;
+}
+
 h2 {
   font-size: 1.2em;
   margin-bottom: 20px;
@@ -37,6 +41,14 @@ button {
   font-size: 0.85em;
   text-transform: uppercase;
   letter-spacing: 1.5px;
+  border: 1px solid transparent;
+}
+
+button:hover {
+  background: none;
+  color: #494c5f;
+  border: 1px solid #494c5f;
+  cursor: pointer;
 }
 
 .wrapper {
@@ -45,7 +57,7 @@ button {
 }
 
 header {
-  padding: 40px 0 90px 0;
+  padding: 40px 0 50px 0;
 }
 
 main {
@@ -108,6 +120,17 @@ main {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.card.highlight button:hover {
+  color: white;
+  background: none;
+  border: 1px solid white;
+}
+
+#toggle input {
+  height: 0px;
+  width: 0px;
+}
+
 #toggle .switch {
   height: 30px;
   width: 60px;
@@ -115,6 +138,11 @@ main {
   background: linear-gradient(to right, #a3a8f0, #696fdd);
   display: inline-block;
   position: relative;
+}
+
+#toggle .switch:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
 
 #toggle .switch::after {
@@ -128,8 +156,26 @@ main {
   border-radius: 100px;
 }
 
+#toggle .switch {
+  margin-bottom: -10px;
+  margin-left: 20px;
+  margin-right: 10px;
+}
+
+#toggle label {
+  color: #b3b5c6;
+}
+
 .moveit::after {
   left: 34px !important;
+}
+
+legend {
+  visibility: hidden;
+}
+
+fieldset {
+  border: none;
 }
 
 /* * MEDIA QUERIES
